# dll-shared-memory

./: .gitignore  CMakeLists.txt  README.md  dll-shared-memory.cbproj  dll-shared-memory.sln  dll-shared-memory.vcxproj  dll-shared-memory.vcxproj.filters  host-shared-memory.cbproj  host-shared-memory.vcxproj  host-shared-memory.vcxproj.filters  host.cpp  library.cpp  library.h  shared-memory.groupproj  shared_memory.h
projectfiles/: dll-shared-memory.cbproj  dll-shared-memory.vcxproj  dll-shared-memory.vcxproj.filters  host-shared-memory.cbproj  host-shared-memory.vcxproj  host-shared-memory.vcxproj.filters
src/: CMakeLists.txt  host.cpp  host.h  host_implementation.cpp  host_implementation.h  library.cpp  library.h  shared_memory.h
